# bens-openai-wrapper

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yaml
openai/: __init__.py
test/: __init__.py  conftest.py  test_completion.py  test_openai.py
